フォントファイルのディレクトリを追加

--- a/giblog.conf
+++ b/giblog.conf
@@ -3,6 +3,6 @@ use warnings;
 use utf8;
 
 {
-  site_title => 'CentOS入門 - CentOS入門ならPerlゼミのCentOS入門',
+  site_title => 'CentOS入門 - CentOSならPerlゼミ',
   site_url => 'http://somesite.example',
 }
