サイト名をCetnOSサーバー構築入門に変更

--- a/giblog.conf
+++ b/giblog.conf
@@ -3,6 +3,6 @@ use warnings;
 use utf8;
 
 {
-  site_title => 'CentOS入門 - CentOSならPerlゼミ',
-  site_url => 'http://somesite.example',
+  site_title => 'CentOSサーバー構築入門 - CentOSでPerl Webシステム開発',
+  site_url => 'https://centos.perlzemi.com/',
 }
