--- a/giblog.conf
+++ b/giblog.conf
@@ -3,6 +3,6 @@ use warnings;
 use utf8;
 
 {
-  site_title => 'CentOSサーバー構築入門 - CentOSでPerl Webシステム開発',
+  site_title => 'CentOS+Perl Webシステム開発環境構築入門',
   site_url => 'https://centos.perlzemi.com/',
 }
